force-app/main/default/objects/CC__c/CC__c.object-meta.xml
<CustomObject>
    <label>Certificado de Calibração</label>
    <nameField>
        <label>Número do Certificado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificados de Calibração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>