force-app/main/default/objects/CC__c/fields/Corrente_4__c.field-meta.xml
<CustomField>
    <fullName>Corrente_4__c</fullName>
    <label>Corrente (4)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>