force-app/main/default/objects/CC__c/fields/Corrente_5__c.field-meta.xml
<CustomField>
    <fullName>Corrente_5__c</fullName>
    <label>Corrente (5)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>