force-app/main/default/objects/CC__c/fields/Corrente_7__c.field-meta.xml
<CustomField>
    <fullName>Corrente_7__c</fullName>
    <label>Corrente (7)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>