force-app/main/default/objects/CC__c/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <formula>Cliente__r.ShippingStreet &amp; &quot;, &quot; &amp; Cliente__r.ShippingCity &amp; &quot;, &quot; &amp; Cliente__r.ShippingState &amp; &quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>