force-app/main/default/objects/CC__c/fields/Equipamento_Instrumento__c.field-meta.xml
<CustomField>
    <fullName>Equipamento_Instrumento__c</fullName>
    <formula>Ordem_de_Trabalho_Relacinada__r.Asset.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipamento/Instrumento</label>
    <type>Text</type>
</CustomField>