force-app/main/default/objects/CC__c/fields/Local_da_Calibra_o__c.field-meta.xml
<CustomField>
    <fullName>Local_da_Calibra_o__c</fullName>
    <label>Local da Calibração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>