force-app/main/default/objects/CC__c/fields/Localiza_o_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Localiza_o_do_Equipamento__c</fullName>
    <label>Localização do Equipamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>