force-app/main/default/objects/CC__c/fields/NCP_2__c.field-meta.xml
<CustomField>
    <fullName>NCP_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° de Certificado do Padrão (2)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CP__c.Padr_o_Relacionado__c</field>
            <operation>equals</operation>
            <valueField>$Source.PU_2__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CP__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (N° de Certificado do Padrão (2))</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o1</relationshipName>
    <type>Lookup</type>
</CustomField>