force-app/main/default/objects/CC__c/fields/NCP_3__c.field-meta.xml
<CustomField>
    <fullName>NCP_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° de Certificado do Padrão (3)</label>
    <referenceTo>CP__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (N° de Certificado do Padrão (3))</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o4</relationshipName>
    <type>Lookup</type>
</CustomField>