force-app/main/default/objects/CC__c/fields/NCP_4__c.field-meta.xml
<CustomField>
    <fullName>NCP_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N° de Certificado do Padrão (4)</label>
    <referenceTo>CP__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (N° de Certificado do Padrão (4))</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o5</relationshipName>
    <type>Lookup</type>
</CustomField>