force-app/main/default/objects/CC__c/fields/Ordem_de_Trabalho_Relacinada__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_Trabalho_Relacinada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de Trabalho Relacinada</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Certificados de Calibração</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o</relationshipName>
    <type>Lookup</type>
</CustomField>