force-app/main/default/objects/CC__c/fields/PAP__c.field-meta.xml
<CustomField>
    <fullName>PAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Padrão de Apoio</label>
    <referenceTo>Padr_o_Engenharia_Clinica__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (Padrão de Apoio)</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o1</relationshipName>
    <type>Lookup</type>
</CustomField>