force-app/main/default/objects/CC__c/fields/Press_o_hPa__c.field-meta.xml
<CustomField>
    <fullName>Press_o_hPa__c</fullName>
    <label>Pressão (hPa)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>