force-app/main/default/objects/CC__c/fields/Prox_Calibra_o__c.field-meta.xml
<CustomField>
    <fullName>Prox_Calibra_o__c</fullName>
    <formula>Data_da_Calibra_o__c +365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prox. Calibração</label>
    <type>Date</type>
</CustomField>