force-app/main/default/objects/CC__c/fields/PU_2__c.field-meta.xml
<CustomField>
    <fullName>PU_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Padrão Utilizado (2)</label>
    <referenceTo>Padr_o_Engenharia_Clinica__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (Padrão Utilizado (2))</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o3</relationshipName>
    <type>Lookup</type>
</CustomField>