force-app/main/default/objects/CC__c/fields/PU_3__c.field-meta.xml
<CustomField>
    <fullName>PU_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Padrão Utilizado (3)</label>
    <referenceTo>Padr_o_Engenharia_Clinica__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (Padrão Utilizado (3))</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o4</relationshipName>
    <type>Lookup</type>
</CustomField>