force-app/main/default/objects/CC__c/fields/PU_4__c.field-meta.xml
<CustomField>
    <fullName>PU_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Padrão Utilizado (4)</label>
    <referenceTo>Padr_o_Engenharia_Clinica__c</referenceTo>
    <relationshipLabel>Certificados de Calibração (Padrão Utilizado (4))</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o5</relationshipName>
    <type>Lookup</type>
</CustomField>