force-app/main/default/objects/CC__c/fields/PU__c.field-meta.xml
<CustomField>
    <fullName>PU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Padrão Utilizado</label>
    <referenceTo>Padr_o_Engenharia_Clinica__c</referenceTo>
    <relationshipLabel>Certificados de Calibração</relationshipLabel>
    <relationshipName>Certificados_de_Calibra_o</relationshipName>
    <type>Lookup</type>
</CustomField>