force-app/main/default/objects/CC__c/fields/RE_2__c.field-meta.xml
<CustomField>
    <fullName>RE_2__c</fullName>
    <label>Resolução do Equipamento (2)</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>