force-app/main/default/objects/CC__c/fields/RE_4__c.field-meta.xml
<CustomField>
    <fullName>RE_4__c</fullName>
    <label>Resolução do Equipamento (4)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>