force-app/main/default/objects/CC__c/fields/TAG_1__c.field-meta.xml
<CustomField>
    <fullName>TAG_1__c</fullName>
    <label>Temperatura da Agua (1)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>