force-app/main/default/objects/CC__c/fields/TAG_2__c.field-meta.xml
<CustomField>
    <fullName>TAG_2__c</fullName>
    <label>Temperatura da Agua (2)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>