force-app/main/default/objects/CC__c/fields/Tag_Patrim_nio__c.field-meta.xml
<CustomField>
    <fullName>Tag_Patrim_nio__c</fullName>
    <formula>Ordem_de_Trabalho_Relacinada__r.Asset.ID_Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag/Patrimônio</label>
    <type>Text</type>
</CustomField>