force-app/main/default/objects/CC__c/fields/TF__c.field-meta.xml
<CustomField>
    <fullName>TF__c</fullName>
    <label>Temperatura Final</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>