force-app/main/default/objects/CC__c/fields/TP_2__c.field-meta.xml
<CustomField>
    <fullName>TP_2__c</fullName>
    <label>Tempo (2)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>