force-app/main/default/objects/CC__c/fields/TP_3__c.field-meta.xml
<CustomField>
    <fullName>TP_3__c</fullName>
    <label>Tempo (3)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>