force-app/main/default/objects/CC__c/fields/TP_4__c.field-meta.xml
<CustomField>
    <fullName>TP_4__c</fullName>
    <label>Tempo (4)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>