force-app/main/default/objects/CC__c/fields/TP__c.field-meta.xml
<CustomField>
    <fullName>TP__c</fullName>
    <label>Tempo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>