force-app/main/default/objects/CC__c/fields/TR__c.field-meta.xml
<CustomField>
    <fullName>TR__c</fullName>
    <formula>TEXT(Ordem_de_Trabalho_Relacinada__r.T_cnico_Respons_vel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Técnico Responsável</label>
    <type>Text</type>
</CustomField>