force-app/main/default/objects/CC__c/fields/TS_3__c.field-meta.xml
<CustomField>
    <fullName>TS_3__c</fullName>
    <label>3 - Tensão</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>