force-app/main/default/objects/CC__c/fields/UMA__c.field-meta.xml
<CustomField>
    <fullName>UMA__c</fullName>
    <label>Umidade Ambiente</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>