force-app/main/default/objects/CC__c/fields/VMEN_10__c.field-meta.xml
<CustomField>
    <fullName>VMEN_10__c</fullName>
    <label>Valor Mensurado (10)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>