force-app/main/default/objects/CC__c/fields/VMEN_11__c.field-meta.xml
<CustomField>
    <fullName>VMEN_11__c</fullName>
    <label>Valor Mensurado (11)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>