force-app/main/default/objects/CC__c/fields/VMQ_2__c.field-meta.xml
<CustomField>
    <fullName>VMQ_2__c</fullName>
    <label>Valores Menores que: (2)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>