force-app/main/default/objects/CC__c/fields/VMQ_3__c.field-meta.xml
<CustomField>
    <fullName>VMQ_3__c</fullName>
    <label>Valores Menores que: (3)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>