force-app/main/default/objects/CC__c/fields/VN_14__c.field-meta.xml
<CustomField>
    <fullName>VN_14__c</fullName>
    <label>Valor Nominal (14)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>