force-app/main/default/objects/CC__c/fields/VN_16__c.field-meta.xml
<CustomField>
    <fullName>VN_16__c</fullName>
    <label>Valor Nominal (16)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>