force-app/main/default/objects/CC__c/fields/VN__c.field-meta.xml
<CustomField>
    <fullName>VN__c</fullName>
    <label>Valor Nominal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>