force-app/main/default/objects/CC__c/fields/X10_VM_4__c.field-meta.xml
<CustomField>
    <fullName>X10_VM_4__c</fullName>
    <label>10 - Leitura (4)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>