force-app/main/default/objects/CC__c/fields/X1_VM__c.field-meta.xml
<CustomField>
    <fullName>X1_VM__c</fullName>
    <label>1 - Leitura</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>