force-app/main/default/objects/CC__c/fields/X1_VP_4__c.field-meta.xml
<CustomField>
    <fullName>X1_VP_4__c</fullName>
    <label>1 - Valor Padrão (4)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>