force-app/main/default/objects/CC__c/fields/X2_TP_5__c.field-meta.xml
<CustomField>
    <fullName>X2_TP_5__c</fullName>
    <label>2 - Tempo (5)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>