force-app/main/default/objects/CC__c/fields/X2_TS__c.field-meta.xml
<CustomField>
    <fullName>X2_TS__c</fullName>
    <label>Tensão (2)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>