force-app/main/default/objects/CC__c/fields/X2_VM__c.field-meta.xml
<CustomField>
    <fullName>X2_VM__c</fullName>
    <label>2 - Leitura</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>