force-app/main/default/objects/CC__c/fields/X3_TP__c.field-meta.xml
<CustomField>
    <fullName>X3_TP__c</fullName>
    <label>3 - Tempo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>