force-app/main/default/objects/CC__c/fields/X4_TS_3__c.field-meta.xml
<CustomField>
    <fullName>X4_TS_3__c</fullName>
    <label>3 - Tensão (4)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>