force-app/main/default/objects/CC__c/recordTypes/BISTUR_EL_TRICO.recordType-meta.xml
<RecordType>
    <fullName>BISTUR_EL_TRICO</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE BISTURÍ ELÉTRICO</description>
    <label>BISTURÍ ELÉTRICO</label>
</RecordType>