force-app/main/default/objects/CC__c/recordTypes/DESFIBRILADOR.recordType-meta.xml
<RecordType>
    <fullName>DESFIBRILADOR</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRA;&apos;AO DE DESFIBRILADORES</description>
    <label>DESFIBRILADOR</label>
</RecordType>