force-app/main/default/objects/CC__c/recordTypes/MONITOR_DE_ECG.recordType-meta.xml
<RecordType>
    <fullName>MONITOR_DE_ECG</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE MONITOR DE ECG</description>
    <label>MONITOR DE ECG</label>
</RecordType>