force-app/main/default/objects/CC__c/recordTypes/MONITOR_MULTIPARAM_TRICO.recordType-meta.xml
<RecordType>
    <fullName>MONITOR_MULTIPARAM_TRICO</fullName>
    <active>true</active>
    <description>CERTICADO DE CALIBRAÇÃO DE MONITOR MULTIPARAMÉTRICO</description>
    <label>MONITOR MULTIPARAMÉTRICO</label>
</RecordType>