force-app/main/default/objects/CC__c/recordTypes/OXIMETRO.recordType-meta.xml
<RecordType>
    <fullName>OXIMETRO</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE OXIMETROS (SPO2 E BPM)</description>
    <label>OXIMETRO</label>
</RecordType>