force-app/main/default/objects/CC__c/recordTypes/PRESS_O.recordType-meta.xml
<RecordType>
    <fullName>PRESS_O</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE PRESSÃO</description>
    <label>PRESSÃO</label>
</RecordType>