force-app/main/default/objects/CC__c/recordTypes/SELADORA.recordType-meta.xml
<RecordType>
    <fullName>SELADORA</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE SELADORA</description>
    <label>SELADORA</label>
</RecordType>