force-app/main/default/objects/CC__c/recordTypes/TERM_METRO.recordType-meta.xml
<RecordType>
    <fullName>TERM_METRO</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE TERMÔMETRO</description>
    <label>TERMÔMETRO</label>
</RecordType>