force-app/main/default/objects/CC__c/recordTypes/TERM_METRO_INFRAVERMELHO.recordType-meta.xml
<RecordType>
    <fullName>TERM_METRO_INFRAVERMELHO</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE TERMÔMETRO INFRAVERMELHO</description>
    <label>TERMÔMETRO INFRAVERMELHO</label>
</RecordType>