force-app/main/default/objects/CC__c/recordTypes/TERMOHIGROMETRO.recordType-meta.xml
<RecordType>
    <fullName>TERMOHIGROMETRO</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE TERMOHIGROMETRO</description>
    <label>TERMOHIGROMETRO</label>
</RecordType>