force-app/main/default/objects/CC__c/recordTypes/VENTILADOR_PULMONAR.recordType-meta.xml
<RecordType>
    <fullName>VENTILADOR_PULMONAR</fullName>
    <active>true</active>
    <description>CERTICADO DE CALIBRAÇÃO DE VENTILADOR PULMONAR</description>
    <label>VENTILADOR PULMONAR</label>
</RecordType>