force-app/main/default/objects/CC__c/recordTypes/VOLUME.recordType-meta.xml
<RecordType>
    <fullName>VOLUME</fullName>
    <active>true</active>
    <description>CERTIFICADO DE CALIBRAÇÃO DE VOLUME</description>
    <label>VOLUME</label>
</RecordType>